--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 descripcion: "Ideal para uso diario.",
                 precio: 799.99, 
                 stock: 10,
-                imagen: "image/Laptop.png"
+                imagen: "Laptop.png"
             },
             { 
                 id: 2, 
@@ -301,7 +301,7 @@
                 descripcion: "Producto versátil con múltiples aplicaciones.",
                 precio: 499.50, 
                 stock: 15,
-                imagen: "image/phone.png"
+                imagen: "phone.png"
             },
             { 
                 id: 3, 
@@ -309,7 +309,7 @@
                 descripcion: "Alta calidad para satisfacer tus necesidades.",
                 precio: 299.99, 
                 stock: 8,
-                imagen: "image/tablet.png"
+                imagen: "tablet.png"
             },
             { 
                 id: 4, 
@@ -317,7 +317,7 @@
                 descripcion: "Perfecto para regalar o disfrutar en casa.",
                 precio: 79.99, 
                 stock: 20,
-                imagen: "image/audi.png"
+                imagen: "audi.png"
             }
         ];
 
